# dans-transformer-service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  README.md  pyproject.toml
admin-templates/: home.html
conf/: .secrets.toml.example  settings.toml
resources/examples/: map.xml  simple.xml
resources/saved-templates/: datacite-jinja_templates.txt
resources/saved-xsl/: form-metadata-to-dataset-v1.xsl  form-metadata-to-dataset-v2.xsl  form-metadata-to-dataset-v3.xsl  form-metadata-to-dataset-v5.xsl  form-metadata-to-dataset.xsl
resources/saved-xsl.old/ohsmart/: ohsmart-form-metadata-to-json-private-v1.xsl  ohsmart-form-metadata-to-json-public-v1.xsl  ohsmart-form-metadata-to-text-public-v1.xsl
resources/saved-xsl/4tu/: 4tu-form-metadata-to-DV-files-poc.xsl  4tu-form-metadata-to-DV-metadata-poc.xsl
resources/saved-xsl/faircore4eosc/: faircore4eosc-form-metadata-to-dataverse-dataset-v1.xsl  faircore4eosc-form-metadata-to-swd-sword-v1.xsl
resources/saved-xsl/odissei/: cid-dv.xsl
resources/saved-xsl/ohsmart/: ohsmart-form-metadata-to-DV-commons.xsl  ohsmart-form-metadata-to-DV-files-v1.xsl  ohsmart-form-metadata-to-DV-files-v2.xsl  ohsmart-form-metadata-to-DV-metadata-v3.xsl  ohsmart-form-metadata-to-DV-metadata-v4.xsl  ohsmart-form-metadata-to-json-all-v1.xsl  ohsmart-form-metadata-to-json-private-v2.xsl  ohsmart-form-metadata-to-json-public-v2.xsl  ohsmart-form-metadata-to-text-private-v1.xsl  ohsmart-form-metadata-to-text-private-v2.xsl  ohsmart-form-metadata-to-text-public-v2.xsl
saved-templates/: datacite-jsonpathfinder_mapping.properties
saved-xsl/: cbs-datacite-10.57934.xsl  cbs-datacite.xsl
saxon/saxon-macos/Saxon.C.API/: DocumentBuilder.cpp  DocumentBuilder.h  SaxonApiException.cpp  SaxonApiException.h  SaxonCGlue.c  SaxonCGlue.h  SaxonCProcessor.c  SaxonCProcessor.h  SaxonCXPath.c  SaxonCXPath.h  SaxonProcessor.cpp  SaxonProcessor.h  SaxoncNewDebug.h  SchemaValidator.cpp  SchemaValidator.h  XPathProcessor.cpp  XPathProcessor.h  XQueryProcessor.cpp  XQueryProcessor.h  XdmArray.cpp  XdmArray.h  XdmAtomicValue.cpp  XdmAtomicValue.h  XdmFunctionItem.cpp  XdmFunctionItem.h  XdmItem.cpp  XdmItem.h  XdmMap.cpp  XdmMap.h  XdmNode.cpp  XdmNode.h  XdmValue.cpp  XdmValue.h  Xslt30Processor.cpp  Xslt30Processor.h  XsltExecutable.cpp  XsltExecutable.h  config.m4  php5_saxon.cpp  php5_saxon.h  (+9 more)
saxon/saxon-macos/Saxon.C.API/python-saxon/: readme.txt  saxon-setup.py  saxon_example.py  saxon_example2.py  saxon_example3.py  saxon_exampleEE.py  saxonc.cpp  saxonc.pyx  saxoncClasses.pxd  test_saxon_schema.py  test_saxonc.py
saxon/saxon-macos/saxon-data/w3c/: catalog.xml
src/: admin.py  common.py  commons.py  main.py  protected.py  public.py  settings.toml
src/conf/: settings.toml
tests/: locustfile.py  regression-test.sh
