[tool.poetry]
name = "dans-transformer-service"
version = "0.5.3"
description = "DANS Transformer Service"
authors = ["eko indarto <eko.indarto@dans.knaw.nl>"]
include = ["resources/*", "saxon/saxon-linux/*", "saved-xsl/*", "logs/*", "static",
    "admin-templates", "saved-templates"]

packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10.6"
fastapi = "^0.79.1"
Cython = "^0.29.32"
uvicorn = "^0.18.2"
dynaconf = "^3.1.9"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
jproperties = "^2.1.1"
rdflib = "^6.2.0"
xmltodict = "^0.13.0"
fastapi-utils = "^0.2.1"
boltons = "^21.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
