[tool.poetry]
name = "dans-transformer-service"
version = "0.5.9"
description = "DANS Transformer Service"
authors = ["eko indarto <eko.indarto@dans.knaw.nl>"]
include = ["resources/*", "saxon/saxon-linux/*", "saved-xsl/*", "logs/*", "static",
    "admin-templates", "saved-templates"]

packages = [
    { include = "src"}
]

[project.urls]
Homepage = ""
Documentation = "https://readthedocs.org"
Repository = "https://github.com/ekoi/dans-transformer-service"
Issues = "https://github.com/ekoi/dans-transformer-service /issues"
Changelog = "https://github.com/ekoi/dans-transformer-service /master/CHANGELOG.md"



[tool.poetry.dependencies]
python = "^3.11.1"
fastapi = "^0.109.0"
Cython = "^0.29.32"
uvicorn = "^0.25.0"
dynaconf = "^3.1.9"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
jproperties = "^2.1.1"
rdflib = "^7.0.0"
xmltodict = "^0.13.0"
fastapi-utils = "^0.2.1"
boltons = "^23.1.1"
saxonche = "^12.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
